# polars-phonetics

./: .gitignore  Cargo.toml  LICENSE  LICENSE.txt  Makefile  README.md  pyproject.toml  run.ipynb  run.py
.github/workflows/: CI.yml  publish_to_pypi.yml  publish_to_test_pypi.yml
polars_phonetics/: __init__.py
src/: expressions.rs
tests/: test_dmetaphone.py  test_metaphone.py  test_nysiis.py  test_soundex.py
