[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=1.3.0"]
build-backend = "maturin"

[project]
name = "polars-phonetics"
description = "Python Polars plugin for Rust-built phonetic algorithms"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.8,<3.13"
keywords = ["polars", "plugin", "polars plugin", "phonetics", "phonetic algorithm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows :: Windows 11",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Rust",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = [
  "polars>1.2.1"
]
authors = [
  {name = "LeCodeMinister", email = "lecodeminister@proton.me"}
]
maintainers = [
  {name = "LeCodeMinister", email = "lecodeminister@proton.me"}
]

[project.urls]
"Repository" = "https://github.com/LeCodeMinister/polars-phonetics"
"Documentation" = "https://github.com/LeCodeMinister/polars-phonetics/blob/master/README.md"
"Change Log" = "https://github.com/LeCodeMinister/polars-phonetics/releases"
"Issue Tracker" = "https://github.com/LeCodeMinister/polars-phonetics/issues"

[tool.maturin]
module-name = "polars_phonetics._internal"

[[tool.mypy.overrides]]
module = "polars.utils.udfs"
ignore_missing_imports = true
